--- a/page.html
+++ b/page.html
@@ -1354,6 +1354,34 @@
               />
             </picture>
           </article>
+          <article class="article-box featured-article">
+            <div class="article-textbox">
+              <div>
+                <h3 class="h3">
+                  Malware Inside Malware Analysis
+                </h3>
+                <p class="article-text">
+                  Advanced proficient in Identifying various types of <b>Malicious documents</b>, extracting and Analyzing embedded objects, Dynamic Analysis techniques to uncover Malicious behavior.
+                </p>
+              </div>
+              <div class="article-info">
+                <a href="#" class="link" target="_blank" rel="noopener"
+                  >Continue reading</a
+                >
+                <span class="reaction-count">
+                  <img src="./assets/images/heart-outline.svg" alt="heart" />
+                  218
+                </span>
+              </div>
+            </div>
+            <picture class="article-illustration">
+              <img
+                src="assets/images/src/MDA.png"
+                alt="Kerberos Attacks"
+                loading="lazy"
+              />
+            </picture>
+          </article>
           <article class="article-box">
             <div class="article-textbox">
               <div>
