--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <p class="work-text"><br>
                   <b>Defensive Security</b><br>CCSA., CDSA., OSDA., CISO., CISAv2., CISM., CRISC., Cybersecurity Foundation., SIT., MAST., CSE., CISSP., CISSM.<br><br>
                   <b>Offensive Security</b><br>CRTM., CRTS., CRTP., CRTE., CESP-ADCS., AADL., ADA (AE)., PACES., PACSP., CARTE., CARTP., CAWASP., CRTO., CRTL., 
-                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., KLCP., 
+                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., OSCP+., KLCP., 
                   OSWP., OSEP., OSED., OSWE., OSWA., OSCE3., OSMR., OSEE., C|EH (Master)., L|PT (Master)., C|HFI (v11)., C|PENT., C|CISO., E|HE., GPEN., 
                   GXPN., CNSS., CPSA., PTEC., PJPT., PNPT., VMF.
                 </p><br>
@@ -318,6 +318,9 @@
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/OSCP.png" alt="Certificate 33">
+                    </div>
+                    <div class="certificate-item">
+                      <img src="assets/images/cert/OSCP+.png" alt="Certificate">
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/OSDA.png" alt="Certificate 34">
