--- a/page.html
+++ b/page.html
@@ -212,7 +212,7 @@
                 <p class="work-text"><br>
                   <b>Defensive Security</b><br>CCSA., CDSA., OSDA., CISO., CISAv2., CISM., CRISC., Cybersecurity Foundation., SIT., MAST., CSE., CISSP., CISSM.<br><br>
                   <b>Offensive Security</b><br>CRTM., CRTS., CRTP., CRTE., CESP-ADCS., AADL., ADA (AE)., PACES., PACSP., CARTE., CARTP., CAWASP., CRTO., CRTL., 
-                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., KLCP., 
+                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., OSCP+., KLCP., 
                   OSWP., OSEP., OSED., OSWE., OSWA., OSCE3., OSMR., OSEE., C|EH (Master)., L|PT (Master)., C|HFI (v11)., C|PENT., C|CISO., E|HE., GPEN., 
                   GXPN., CNSS., CPSA., PTEC., PJPT., PNPT., VMF.
                 </p><br>
@@ -316,6 +316,9 @@
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/OSCP.png" alt="Certificate 33">
+                    </div>
+                    <div class="certificate-item">
+                      <img src="assets/images/cert/OSCP+.png" alt="Certificate">
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/OSDA.png" alt="Certificate 34">
@@ -1377,6 +1380,34 @@
             <picture class="article-illustration">
               <img
                 src="assets/images/src/MDA.png"
+                alt="Kerberos Attacks"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article class="article-box featured-article">
+            <div class="article-textbox">
+              <div>
+                <h3 class="h3">
+                  Wired Equivalent Privacy Attacks
+                </h3>
+                <p class="article-text">
+                  Wired Equivalent Privacy (WEP) and the various attacks that can compromise it. We'll explore how to identify access points configured with WEP.
+                </p>
+              </div>
+              <div class="article-info">
+                <a href="#" class="link" target="_blank" rel="noopener"
+                  >Continue reading</a
+                >
+                <span class="reaction-count">
+                  <img src="./assets/images/heart-outline.svg" alt="heart" />
+                  104
+                </span>
+              </div>
+            </div>
+            <picture class="article-illustration">
+              <img
+                src="assets/images/src/WEP.png"
                 alt="Kerberos Attacks"
                 loading="lazy"
               />
