--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="work-boxes">
             <div class="work-box">
               <div class="work-textbox">
-                <h3 class="h3">My Introduction</h3><br>
+                <h3 class="h3">BYT3N33DL3 Intro</h3><br>
                 Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex <b>(APT28)</b> Espionage.<br><br>
                 <!-- Add your project title here -->
                 <h3 class="h3">Security Certifications</h3>
@@ -394,7 +394,7 @@
                   <li>RedTeam</li>
                   <li>SUNY</li>
                   <li>HKUST</li>
-                  <li>ITGovernance</li>
+                  <li>IT Governance</li>
                   <li>EC-Council</li>
                   <li>HackTheBox</li>
                   <li>Altered Security</li>
@@ -1289,6 +1289,22 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
+                Senior Cybersecurity Engineer and Assessor.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/quamus.webp"
+                  alt="Adam Argalye"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">QuamusID</h3>
+                  <p class="testimonial-author-job">Senior Security Engineer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
                 Cybersecurity <b>Specialist</b> for Singtel.
               </blockquote>
               <figure class="testimonial-author">
@@ -1321,17 +1337,49 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                -
+                Graphic Design Specialist and Digital Marketing
               </blockquote>
               <figure class="testimonial-author">
                 <img
-                  src="assets/images/trusted-by/blank.png"
+                  src="assets/images/trusted-by/autium.png"
                   alt="Val Head"
                   loading="lazy"
                 />
                 <figcaption>
-                  <h3 class="testimonial-author-name">Soon . .</h3>
-                  <p class="testimonial-author-job">-</p>
+                  <h3 class="testimonial-author-name">Autium</h3>
+                  <p class="testimonial-author-job">Graphic Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                My experience as <b>Offensive</b> Security Operator.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/hsbc.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">HSBCBank</h3>
+                  <p class="testimonial-author-job">Security Operator</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Senior Offensive Engineer. Mostly Security <b>Tester</b>.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/zenex.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Zenex Technology</h3>
+                  <p class="testimonial-author-job">Senior Offensive Engineer</p>
                 </figcaption>
               </figure>
             </li>
@@ -1658,7 +1706,7 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">QuamusID</h3>
-                  <p class="testimonial-author-job">Senior Engineer</p>
+                  <p class="testimonial-author-job">Senior Security Engineer</p>
                 </figcaption>
               </figure>
             </li>
@@ -1787,6 +1835,54 @@
                 <figcaption>
                   <h3 class="testimonial-author-name">Nimiq</h3>
                   <p class="testimonial-author-job">Security Community</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                My experience as <b>Offensive</b> Security Operator.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/hsbc.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">HSBCBank</h3>
+                  <p class="testimonial-author-job">Security Operator</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Senior Offensive Engineer. Mostly Security <b>Tester</b>.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/zenex.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Zenex Technology</h3>
+                  <p class="testimonial-author-job">Senior Offensive Engineer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                -
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/blank.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Soon . .</h3>
+                  <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
             </li>
@@ -3027,7 +3123,7 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="John the Ripper" href="https://github.com/PasswordExecution" target="_blank" rel="noopener"
+                <a title="John the Ripper" href="https://github.com/Kardy-thc" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
                     src="assets/images/social-links/mr.png"
