--- a/page.html
+++ b/page.html
@@ -204,7 +204,7 @@
           <div class="work-boxes">
             <div class="work-box">
               <div class="work-textbox">
-                <h3 class="h3">My Introduction</h3><br>
+                <h3 class="h3">BYT3N33DL3 Intro</h3><br>
                 Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex <b>(APT28)</b> Espionage.<br><br>
                 <!-- Add your project title here -->
                 <h3 class="h3">Security Certifications</h3>
@@ -392,7 +392,7 @@
                   <li>RedTeam</li>
                   <li>SUNY</li>
                   <li>HKUST</li>
-                  <li>ITGovernance</li>
+                  <li>IT Governance</li>
                   <li>EC-Council</li>
                   <li>HackTheBox</li>
                   <li>Altered Security</li>
@@ -443,11 +443,9 @@
                 <!-- Add small description of your project  -->
                 <p class="work-text">Learning Knowledge On-going</p>
                 <ol class="work-technologies">
-                  <li>MacOS Kerberos Attacks</li>
+                  <li>iOS TCC Lateral Worm</li>
                   <li>Web 3.0 and Blockchain Attacks</li>
                   <li>Satellite Penetration Testing</li>
-                  <li>Offensive Assembly x86</li>
-                  <li>CCTV's Privilege Escalation</li>
                   <li>Disk Reverse Engineering</li>
                 </ol>
                 <div class="work-links">
@@ -750,6 +748,34 @@
               <picture class="article-illustration">
                 <img
                   src="assets/images/work/wordpres.png"
+                  alt="Kerberos Attacks"
+                  loading="lazy"
+                />
+              </picture>
+            </article>
+            <article class="article-box featured-article">
+              <div class="article-textbox">
+                <div>
+                  <h3 class="h3">
+                    Intermediate Deep Learning Attacks
+                  </h3>
+                  <p class="article-text">
+                    For professionals planning on working with Artificial Intelligence (AI), Machine Learning (ML), and Deep Learning (DL) systems, grasping the underlying technologies.
+                  </p>
+                </div>
+                <div class="article-info">
+                  <a href="#" class="link" target="_blank" rel="noopener"
+                    >Continue reading</a
+                  >
+                  <span class="reaction-count">
+                    <img src="./assets/images/heart-outline.svg" alt="heart" />
+                    1.2 K
+                  </span>
+                </div>
+              </div>
+              <picture class="article-illustration">
+                <img
+                  src="assets/images/src/AI.png"
                   alt="Kerberos Attacks"
                   loading="lazy"
                 />
@@ -3742,7 +3768,7 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="John the Ripper" href="https://github.com/PasswordExecution" target="_blank" rel="noopener"
+                <a title="John the Ripper" href="https://github.com/Kardy-thc" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
                     src="assets/images/social-links/mr.png"
