Blog.Software IndexPlus
# Blog

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li class="nav-item">
             <a href="#contact" data-focused="last-focused">Contact</a>
           </li><br><br>
-          <li class="nav-item"><a href="#">Software Blog</a></li>
+          <li class="nav-item"><a href="tool.html">Software Blog</a></li>
           </li>
         </ol>
       </nav>
@@ -1079,11 +1079,60 @@
           </a>
         </div>
       </div>
- <!-- Update img src and alt attribute  -->
       <picture class="work-img">
         <img
           loading="lazy"
           src="assets/images/banner/thys.png"
+          alt="portfolio template"
+        />
+      </picture>
+  </div>
+  <div class="work-box">
+    <div class="work-textbox">
+      <!-- Add your project title here -->
+      <h3 class="h3">Active Directory Penetration Expert</h3>
+      <!-- Add small description of your project  -->
+      <p class="work-text">Knowledge Domains in <b>Offensive IX</b> Security Team</p>
+      <ol class="work-technologies">
+        <li>Advanced AD Enumeration</li>
+        <li>Advanced Windows Attacks</li>
+        <li>Abusing AD Protocols</li>
+        <li>BloodHound Enterprise</li>
+        <li>Abusing AD Trusts</li>
+        <li>Using SharkMapExec</li>
+        <li>Abusing AD Misconfigurations</li>
+        <li>Abusing Directory Components</li>
+        <li>Kerberos Attacks Professional</li>
+        <li>C2 Operations 909 : Sliver</li>
+        <li>Windows Evasion Expert</li>
+        <li>Mapping with BlackMarlinExec</li>
+        <li>Pivoting and Lateral Movement</li>
+        <li>Advanced Post-Exploitation</li>
+      </ol>
+      <div class="work-links">
+        <!-- Add url of project in href attribute -->
+        <a href="https://academy.hackthebox.com/achievement/badge/94d59acd-2ed2-11ef-b18d-bea50ffe6cb4" target="_blank" rel="noopener" class="link"
+          >Offensive IX Domains Credential</a>
+           <!-- Add link to project source code in href attribute if applicable otherwise feel free to delete or comment the markup -->
+        <a
+          href="https://academy.hackthebox.com/achievement/badge/94d59acd-2ed2-11ef-b18d-bea50ffe6cb4"
+          target="_blank"
+          rel="noopener"
+          title="Source code"
+        >
+          <img
+            src="assets/images/social-links/htb.svg"
+            alt="Twitter"
+            loading="lazy"
+          />
+        </a>
+      </div>
+    </div>
+ <!-- Update img src and alt attribute  -->
+      <picture class="work-img">
+        <img
+          loading="lazy"
+          src="assets/images/work/CAPE.png"
           alt="portfolio template"
         />
       </picture>
@@ -1093,7 +1142,7 @@
           <!-- Add your project title here -->
           <h3 class="h3">Advanced Physical Cyber 909 : Execution</h3>
           <!-- Add small description of your project  -->
-          <p class="work-text">Knowledge Domains in <b>Offensive IX</b> Security Team</p>
+          <p class="work-text">Knowledge Domains in <b>Offensive X</b> Security Team</p>
           <ol class="work-technologies">
             <li>Kali Net Hunter</li>
             <li>Nodemcu ESP</li>
@@ -2914,6 +2963,34 @@
             <picture class="article-illustration">
               <img
                 src="assets/images/banner/both.png"
+                alt="Apple-Attack"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article class="article-box featured-article">
+            <div class="article-textbox">
+              <div>
+                <h3 class="h3">
+                  Active Directory Expert Tester
+                </h3>
+                <p class="article-text">
+                  Senior technical competency in <b>Active Directory</b> and <b>Windows</b> penetration testing, understanding complex Attack Paths, and employing Advanced techniques to Exploit them.
+                </p>
+              </div>
+              <div class="article-info">
+                <a href="#" class="link" target="_blank" rel="noopener"
+                  >Continue reading</a
+                >
+                <span class="reaction-count">
+                  <img src="./assets/images/heart-outline.svg" alt="heart" />
+                  2 K
+                </span>
+              </div>
+            </div>
+            <picture class="article-illustration">
+              <img
+                src="assets/images/work/CAPE-2.png"
                 alt="Apple-Attack"
                 loading="lazy"
               />
