--- a/page.html
+++ b/page.html
@@ -84,7 +84,7 @@
           <li class="nav-item">
             <a href="#contact" data-focused="last-focused">Contact</a>
           </li><br><br>
-          <li class="nav-item"><a href="#">Software Blog</a></li>
+          <li class="nav-item"><a href="tool.html">Software Blog</a></li>
         </ol>
       </nav>
 
@@ -692,6 +692,34 @@
               <picture class="article-illustration">
                 <img
                   src="assets/images/src/intro-whitebox.png"
+                  alt="Kerberos Attacks"
+                  loading="lazy"
+                />
+              </picture>
+            </article>
+            <article class="article-box featured-article">
+              <div class="article-textbox">
+                <div>
+                  <h3 class="h3">
+                    Advanced Directory Penetration Tester
+                  </h3>
+                  <p class="article-text">
+                    Experienced with <b>Active Directory</b> Certificate Services, Windows Update Server Services, Exchange, and Domain Trusts Attacks, exploit it from Linux and Windows and utilizing Command and Control.
+                  </p>
+                </div>
+                <div class="article-info">
+                  <a href="#" class="link" target="_blank" rel="noopener"
+                    >Continue reading</a
+                  >
+                  <span class="reaction-count">
+                    <img src="./assets/images/heart-outline.svg" alt="heart" />
+                    1.8 K
+                  </span>
+                </div>
+              </div>
+              <picture class="article-illustration">
+                <img
+                  src="assets/images/work/bn-cape.png"
                   alt="Kerberos Attacks"
                   loading="lazy"
                 />
@@ -3559,6 +3587,34 @@
             <picture class="article-illustration">
               <img
                 src="assets/images/banner/both.png"
+                alt="Apple-Attack"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article class="article-box featured-article">
+            <div class="article-textbox">
+              <div>
+                <h3 class="h3">
+                  Active Directory Expert Tester
+                </h3>
+                <p class="article-text">
+                  Senior technical competency in <b>Active Directory</b> and <b>Windows</b> penetration testing, understanding complex Attack Paths, and employing Advanced techniques to Exploit them.
+                </p>
+              </div>
+              <div class="article-info">
+                <a href="#" class="link" target="_blank" rel="noopener"
+                  >Continue reading</a
+                >
+                <span class="reaction-count">
+                  <img src="./assets/images/heart-outline.svg" alt="heart" />
+                  2 K
+                </span>
+              </div>
+            </div>
+            <picture class="article-illustration">
+              <img
+                src="assets/images/work/CAPE-2.png"
                 alt="Apple-Attack"
                 loading="lazy"
               />
