BYTENEEDLE Site (#472) Update.console.log
# Got myself a CAPE

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- Update favicon href attribute with image of yourself -->
     <link
       rel="shortcut icon"
-      href="assets/images/banner/cpts-mini2.png"
+      href="assets/images/blackmarlinexec2.png"
       type="image/png"
     />
 
@@ -214,7 +214,7 @@
                 <p class="work-text"><br>
                   <b>Defensive Security</b><br>CCSA., CDSA., OSDA., CISO., CISAv2., CISM., CRISC., Cybersecurity Foundation., SIT., MAST., CSE., CISSP., CISSM.<br><br>
                   <b>Offensive Security</b><br>CRTM., CRTS., CRTP., CRTE., CESP-ADCS., AADL., ADA (AE)., PACES., PACSP., CARTE., CARTP., CAWASP., CRTO., CRTL., 
-                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., OSCP+., KLCP., 
+                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., CAPE., OSCP., OSCP+., KLCP., 
                   OSWP., OSEP., OSED., OSWE., OSWA., OSCE3., OSMR., OSEE., C|EH (Master)., L|PT (Master)., C|HFI (v11)., C|PENT., C|CISO., E|HE., GPEN., 
                   GXPN., CNSS., CPSA., PTEC., PJPT., PNPT., VMF.
                 </p><br>
@@ -366,6 +366,9 @@
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/PNPT.png" alt="Certificate 48">
+                    </div>
+                    <div class="certificate-item">
+                      <img src="assets/images/cert/CAPE.png" alt="Certificate 49">
                     </div>
                   </div>
                 </div><br>
@@ -1456,8 +1459,8 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                <b>Design</b> in Marketing and Branding role. I've work in High Level project
-                for a Big Campaign such as <b>Pasti Ada Solusi</b>, Indonesia <b>Independance Day</b>, And more.
+                <b>Design</b> in Marketing and Branding. A High Level project for a Big Campaign 
+                such as <b>Pasti Ada Solusi</b>, Indonesia <b>Independance Day</b>, And more.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1467,7 +1470,7 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">
-                    Telkomsel Enterprise
+                    Telkomsel Enterprise 
                   </h3>
                   <p class="testimonial-author-job">Marketing and Branding
                   </p>
@@ -1476,7 +1479,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                <b>Senior</b> Security <b>Engineer</b> and Security Record Analyst.
+                <b>Senior</b> Security <b>Engineer</b> and Security Record Analysis.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1495,7 +1498,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Being a part of <b>Telkomsel Enterprise</b> Cybersecurity Specialist.
+                Supply Chains Security for <b>Telkomsel Enterprise</b> as a Senior Security Engineer.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1507,7 +1510,7 @@
                   <h3 class="testimonial-author-name">
                     Telkomsel Enterprise
                   </h3>
-                  <p class="testimonial-author-job">Senior Engineer
+                  <p class="testimonial-author-job">Senior Security Engineer
                   </p>
                 </figcaption>
               </figure>
@@ -1582,24 +1585,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                HackTheBox Academy Website Penetration Testing to seek any Misconfigurations or Bug that has potentials to be <b>Bypassed</b>.
-              </blockquote>
-              <figure class="testimonial-author">
-                <img
-                  src="assets/images/trusted-by/htb.jpg"
-                  alt="Val Head"
-                  loading="lazy"
-                />
-                <figcaption>
-                  <h3 class="testimonial-author-name">HackTheBox</h3>
-                  <p class="testimonial-author-job">Penetration Testing</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="testimonial">
-              <blockquote class="testimonial-text">
-                Being a Security tester on McDonald's order machines to test any Vulnerability. A unique technique and test since this is a 
-                <b>Machine</b> Logic, <b>Machine</b> Learning, and <b>Reverse Engineering</b> Attack.
+                Being a Security tester on McDonald's order machines to test any Vulnerability. Machine Logic, Machine Learning, and <b>Reverse Engineering</b>.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1626,6 +1612,22 @@
                 <figcaption>
                   <h3 class="testimonial-author-name">McDonald's</h3>
                   <p class="testimonial-author-job">Senior Security Analyst</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Small part of HackTheBox Academy.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/htb.jpg"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">HackTheBox</h3>
+                  <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
             </li>
@@ -1777,7 +1779,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Advising OffSec organizations on security strategies, Implementing new security solutions, and help them mitigate Cybersecurity risks. Testing their New machine for <b>OSCP+</b>. 
+                Small part of HackTheBox Academy. 
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1787,7 +1789,7 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">Offensive Security</h3>
-                  <p class="testimonial-author-job">Community Education</p>
+                  <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
             </li>
@@ -1921,16 +1923,16 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                -
+                Telkomsel Enterprise Team Reunion
               </blockquote>
               <figure class="testimonial-author">
                 <img
-                  src="assets/images/trusted-by/blank.png"
+                  src="assets/images/trusted-by/MyTelkomsel.webp"
                   alt="Val Head"
                   loading="lazy"
                 />
                 <figcaption>
-                  <h3 class="testimonial-author-name">Soon . .</h3>
+                  <h3 class="testimonial-author-name">Telkomsel Enterprise</h3>
                   <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
