--- a/page.html
+++ b/page.html
@@ -41,7 +41,7 @@
 <!-- Update favicon href attribute with image of yourself -->
     <link
       rel="shortcut icon"
-      href="assets/images/banner/cpts-mini2.png"
+      href="assets/images/blackmarlinexec2.png"
       type="image/png"
     />
 
@@ -212,7 +212,7 @@
                 <p class="work-text"><br>
                   <b>Defensive Security</b><br>CCSA., CDSA., OSDA., CISO., CISAv2., CISM., CRISC., Cybersecurity Foundation., SIT., MAST., CSE., CISSP., CISSM.<br><br>
                   <b>Offensive Security</b><br>CRTM., CRTS., CRTP., CRTE., CESP-ADCS., AADL., ADA (AE)., PACES., PACSP., CARTE., CARTP., CAWASP., CRTO., CRTL., 
-                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., OSCP., OSCP+., KLCP., 
+                  PenTest+., CPT., CRT., eMAPT., eWPTXv2., eCPPTv2., eCPTXv2., eCXD., CCSAS., CBBH., CPTS., CWEE., CAPE., OSCP., OSCP+., KLCP., 
                   OSWP., OSEP., OSED., OSWE., OSWA., OSCE3., OSMR., OSEE., C|EH (Master)., L|PT (Master)., C|HFI (v11)., C|PENT., C|CISO., E|HE., GPEN., 
                   GXPN., CNSS., CPSA., PTEC., PJPT., PNPT., VMF.
                 </p><br>
@@ -364,6 +364,9 @@
                     </div>
                     <div class="certificate-item">
                       <img src="assets/images/cert/PNPT.png" alt="Certificate 48">
+                    </div>
+                    <div class="certificate-item">
+                      <img src="assets/images/cert/CAPE.png" alt="Certificate 49">
                     </div>
                   </div>
                 </div><br>
