--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex MyOrbit | Ex DBSBank | Ex SpaceX</b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>
           </p>
           <div class="header-btns">
             <a href="index.html" class="btn btn-cta">Experiences Domain</a>
@@ -1274,7 +1274,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Telkomsel <b>Cybersecurity</b> Specialist.
+                Telkomsel <b>Cybersecurity</b> Specialist and Engineer.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1432,6 +1432,54 @@
                 <figcaption>
                   <h3 class="testimonial-author-name">Zenex Technology</h3>
                   <p class="testimonial-author-job">Senior Offensive Engineer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Strategic <b>Marketing and Communications</b> Division and Researcher.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/telkom-white.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Telkomsel</h3>
+                  <p class="testimonial-author-job">Strategic Marketing Communications and Researcher</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Microsoft Azure AI <b>Artificial intelligence</b> System Engineer.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/azure.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Azure AI</h3>
+                  <p class="testimonial-author-job">-</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                -
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/blank.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Soon</h3>
+                  <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
             </li>
@@ -1933,6 +1981,54 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">Telkomsel Enterprise</h3>
+                  <p class="testimonial-author-job">-</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Strategic <b>Marketing and Communications</b> Division and Researcher.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/telkom-white.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Telkomsel</h3>
+                  <p class="testimonial-author-job">Strategic Marketing Communications and Researcher</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                Microsoft Azure AI <b>Artificial intelligence</b> System Engineer.
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/azure.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Azure AI</h3>
+                  <p class="testimonial-author-job">-</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="testimonial">
+              <blockquote class="testimonial-text">
+                -
+              </blockquote>
+              <figure class="testimonial-author">
+                <img
+                  src="assets/images/trusted-by/blank.png"
+                  alt="Val Head"
+                  loading="lazy"
+                />
+                <figcaption>
+                  <h3 class="testimonial-author-name">Soon</h3>
                   <p class="testimonial-author-job">-</p>
                 </figcaption>
               </figure>
@@ -3170,11 +3266,11 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="BloodHoundAD" href="https://specterops.io/" target="_blank" rel="noopener"
+                <a title="BloodHound Enterprise" href="https://specterops.io/" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
-                    src="assets/images/social-links/bloodhound.png"
-                    alt="BloodHoundAD"
+                    src="assets/images/trusted-by/bhe.png"
+                    alt="BloodHound Enterprise"
                 /></a>
               </li>
               <li class="footer-link">
