--- a/page.html
+++ b/page.html
@@ -99,7 +99,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex MyOrbit | Ex DBSBank | Ex SpaceX</b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>
           </p>
           <div class="header-btns">
             <a href="index.html" class="btn btn-secondary">Experiences Domain</a>
@@ -444,12 +444,11 @@
                 <!-- Add your project title here -->
                 <h3 class="h3">In Progress Structure</h3>
                 <!-- Add small description of your project  -->
-                <p class="work-text">Learning Knowledge On-going</p>
+                <p class="work-text">Learning On-going</p>
                 <ol class="work-technologies">
-                  <li>iOS TCC Lateral Worm</li>
+                  <li>iOS and MacOS TCC Exploitation</li>
                   <li>Web 3.0 and Blockchain Attacks</li>
-                  <li>Satellite Penetration Testing</li>
-                  <li>Disk Reverse Engineering</li>
+                  <li>Aerospace Engineering</li>
                 </ol>
                 <div class="work-links">
                   <!-- Add url of project in href attribute -->
@@ -3795,11 +3794,11 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="BloodHoundAD" href="https://specterops.io/" target="_blank" rel="noopener"
+                <a title="BloodHound Enterprise" href="https://specterops.io/" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
-                    src="assets/images/social-links/bloodhound.png"
-                    alt="BloodHoundAD"
+                    src="assets/images/trusted-by/bhe.png"
+                    alt="BloodHound Enterprise"
                 /></a>
               </li>
               <li class="footer-link">
