--- a/tool.html
+++ b/tool.html
@@ -100,7 +100,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex MyOrbit | Ex DBSBank | Ex SpaceX</b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>
           </p>
           <div class="header-btns">
             <a href="tool.html" class="btn btn-cta">Software Blog</a>
@@ -589,11 +589,11 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="BloodHoundAD" href="https://specterops.io/" target="_blank" rel="noopener"
+                <a title="BloodHound Enterprise" href="https://specterops.io/" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
-                    src="assets/images/social-links/bloodhound.png"
-                    alt="BloodHoundAD"
+                    src="assets/images/trusted-by/bhe.png"
+                    alt="BloodHound Enterprise"
                 /></a>
               </li>
               <li class="footer-link">
