--- a/page.html
+++ b/page.html
@@ -99,7 +99,7 @@
           <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
             Security Engineer <b>|</b> Offensive Security <b>|</b> Sr. Penetration Tester <b>|</b> Cyber Security <b>|</b> 
-            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>
+            Sr. Bug Hunter <b>|</b> Aerospace Penetration Tester <b>| Ex Telkomsel | Ex DBS | Ex SpaceX</b>
           </p>
           <div class="header-btns">
             <a href="index.html" class="btn btn-secondary">Experiences Domain</a>
