--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="work-box">
               <div class="work-textbox">
                 <h3 class="h3">BYT3N33DL3 Intro</h3><br>
-                Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex <b>(APT28)</b> Espionage.<br><br>
+                Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex (APT28) Espionage.<br><br>
                 <!-- Add your project title here -->
                 <h3 class="h3">Security Certifications</h3>
                 <!-- Add small description of your project  -->
@@ -1309,7 +1309,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Cyberecurity analyst and Security Consultant.
+                Cybersecurity analyst and Security Consultant.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1319,7 +1319,7 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">DBSBank</h3>
-                  <p class="testimonial-author-job">Cybecurity Consultant</p>
+                  <p class="testimonial-author-job">Cybersecurity Consultant</p>
                 </figcaption>
               </figure>
             </li>
@@ -1351,7 +1351,7 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">QuamusID</h3>
-                  <p class="testimonial-author-job">Senior Cybecurity Engineer</p>
+                  <p class="testimonial-author-job">Senior Cybersecurity Engineer</p>
                 </figcaption>
               </figure>
             </li>
@@ -1696,7 +1696,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Cyberecurity analyst and Security Consultant.
+                Cybersecurity analyst and Security Consultant.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1744,7 +1744,7 @@
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Cybecurity Specialist for Singtel.
+                Cybersecurity Specialist for Singtel.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -1802,13 +1802,13 @@
                 />
                 <figcaption>
                   <h3 class="testimonial-author-name">QuamusID</h3>
-                  <p class="testimonial-author-job">Senior Cybecurity Engineer</p>
+                  <p class="testimonial-author-job">Senior Cybersecurity Engineer</p>
                 </figcaption>
               </figure>
             </li>
             <li class="testimonial">
               <blockquote class="testimonial-text">
-                Pagani Web Cybecurity Consultant and Assessor.
+                Pagani Web Cybersecurity Consultant and Assessor.
               </blockquote>
               <figure class="testimonial-author">
                 <img
@@ -3263,14 +3263,6 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="BloodHound Enterprise" href="https://specterops.io/" target="_blank" rel="noopener"
-                  ><img
-                    loading="lazy"
-                    src="assets/images/trusted-by/bhe.png"
-                    alt="BloodHound Enterprise"
-                /></a>
-              </li>
-              <li class="footer-link">
                 <a title="Offensive Security" href="https://portal.offsec.com/account/profile/byt3n33dl3" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
@@ -3292,14 +3284,6 @@
                     loading="lazy"
                     src="assets/images/nah/cour.svg"
                     alt="Coursera"
-                /></a>
-              </li>
-              <li class="footer-link">
-                <a title="John the Ripper" href="https://github.com/Kardy-thc" target="_blank" rel="noopener"
-                  ><img
-                    loading="lazy"
-                    src="assets/images/social-links/mr.png"
-                    alt="John the Ripper"
                 /></a>
               </li>
             </ol>
