--- a/page.html
+++ b/page.html
@@ -205,7 +205,7 @@
             <div class="work-box">
               <div class="work-textbox">
                 <h3 class="h3">BYT3N33DL3 Intro</h3><br>
-                Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex <b>(APT28)</b> Espionage.<br><br>
+                Penetration Testing Specialist <b>|</b> Offensive Security <b>|</b> Ex Black Hat <b>|</b> Ex (APT28) Espionage.<br><br>
                 <!-- Add your project title here -->
                 <h3 class="h3">Security Certifications</h3>
                 <!-- Add small description of your project  -->
@@ -3794,14 +3794,6 @@
                 /></a>
               </li>
               <li class="footer-link">
-                <a title="BloodHound Enterprise" href="https://specterops.io/" target="_blank" rel="noopener"
-                  ><img
-                    loading="lazy"
-                    src="assets/images/trusted-by/bhe.png"
-                    alt="BloodHound Enterprise"
-                /></a>
-              </li>
-              <li class="footer-link">
                 <a title="Offensive Security" href="https://portal.offsec.com/account/profile/byt3n33dl3" target="_blank" rel="noopener"
                   ><img
                     loading="lazy"
@@ -3823,14 +3815,6 @@
                     loading="lazy"
                     src="assets/images/nah/cour.svg"
                     alt="Coursera"
-                /></a>
-              </li>
-              <li class="footer-link">
-                <a title="John the Ripper" href="https://github.com/Kardy-thc" target="_blank" rel="noopener"
-                  ><img
-                    loading="lazy"
-                    src="assets/images/social-links/mr.png"
-                    alt="John the Ripper"
                 /></a>
               </li>
             </ol>
